首页样式调整

--- a/src/icon.less
+++ b/src/icon.less
@@ -96,7 +96,7 @@
     background-size: @bg-size;
 }
 
-.icon-search-l{
+.icon-search-l {
     display: block;
     width: 18px;
     height: 18px;
@@ -684,6 +684,13 @@
     background-size: @bgSize;
 }
 
+.icon-message-envelope {
+    background: url('/static/icons/5_1/transparent_icons.png') -54px -552px no-repeat;
+    width: 24px;
+    height: 24px;
+    background-size: @bgSize;
+}
+
 //白色右箭头
 .icon-arrow-right-white {
     background: url('/static/icons/5_1/transparent_icons.png') -666px -420px no-repeat;
@@ -708,10 +715,196 @@
 }
 
 //刷新
-.icon-refresh{
+.icon-refresh {
     display: inline-block;
     background: url('/static/icons/5_1/transparent_icons.png') -30px -532px no-repeat;
     width: 20px;
     height: 20px;
+    background-size: @bgSize;
+}
+
+//首页图标
+.icon-index-task {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -30px -606px no-repeat;
+    width: 36px;
+    height: 36px;
+    background-size: @bgSize;
+}
+
+.icon-index-notice {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -66px -606px no-repeat;
+    width: 36px;
+    height: 36px;
+    background-size: @bgSize;
+}
+
+.icon-index-safe-activity {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -102px -606px no-repeat;
+    width: 36px;
+    height: 36px;
+    background-size: @bgSize;
+}
+
+.icon-index-qy-data {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -138px -606px no-repeat;
+    width: 36px;
+    height: 36px;
+    background-size: @bgSize;
+}
+
+.icon-index-fw-data {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -174px -606px no-repeat;
+    width: 36px;
+    height: 36px;
+    background-size: @bgSize;
+}
+
+.icon-index-hidden-danger {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -210px -606px no-repeat;
+    width: 36px;
+    height: 36px;
+    background-size: @bgSize;
+}
+
+.icon-index-train {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -30px -642px no-repeat;
+    width: 36px;
+    height: 36px;
+    background-size: @bgSize;
+}
+
+.icon-index-data-count {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -66px -642px no-repeat;
+    width: 36px;
+    height: 36px;
+    background-size: @bgSize;
+}
+
+.icon-index-device {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -102px -642px no-repeat;
+    width: 36px;
+    height: 36px;
+    background-size: @bgSize;
+}
+
+.icon-index-monitor-video {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -138px -642px no-repeat;
+    width: 36px;
+    height: 36px;
+    background-size: @bgSize;
+}
+
+.icon-index-monitor-dq {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -174px -642px no-repeat;
+    width: 36px;
+    height: 36px;
+    background-size: @bgSize;
+}
+
+.icon-index-monitor-sxt {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -210px -642px no-repeat;
+    width: 36px;
+    height: 36px;
+    background-size: @bgSize;
+}
+
+.icon-index-news-info {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -246px -642px no-repeat;
+    width: 36px;
+    height: 36px;
+    background-size: @bgSize;
+}
+
+//首页底部tab
+.icon-tabs-home-0 {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -30px -714px no-repeat;
+    width: 30px;
+    height: 30px;
+    background-size: @bgSize;
+}
+
+.icon-tabs-home-1 {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -30px -744px no-repeat;
+    width: 30px;
+    height: 30px;
+    background-size: @bgSize;
+}
+
+.icon-tabs-task-0 {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -60px -714px no-repeat;
+    width: 30px;
+    height: 30px;
+    background-size: @bgSize;
+}
+
+.icon-tabs-task-1 {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -60px -744px no-repeat;
+    width: 30px;
+    height: 30px;
+    background-size: @bgSize;
+}
+
+.icon-tabs-dpm-0 {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -90px -714px no-repeat;
+    width: 30px;
+    height: 30px;
+    background-size: @bgSize;
+}
+
+.icon-tabs-dpm-1 {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -90px -744px no-repeat;
+    width: 30px;
+    height: 30px;
+    background-size: @bgSize;
+}
+
+.icon-tabs-staff-0 {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -120px -714px no-repeat;
+    width: 30px;
+    height: 30px;
+    background-size: @bgSize;
+}
+
+.icon-tabs-staff-1 {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -120px -744px no-repeat;
+    width: 30px;
+    height: 30px;
+    background-size: @bgSize;
+}
+
+.icon-tabs-my-0 {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -150px -714px no-repeat;
+    width: 30px;
+    height: 30px;
+    background-size: @bgSize;
+}
+
+.icon-tabs-my-1 {
+    display: inline-block;
+    background: url('/static/icons/5_1/transparent_icons.png') -150px -744px no-repeat;
+    width: 30px;
+    height: 30px;
     background-size: @bgSize;
 }
