--- a/src/config.less
+++ b/src/config.less
@@ -13,6 +13,8 @@
 @baseBG02: #f8f8f8; //二级背景色
 @baseMasking: rgba(0, 0, 0, 0.50); //遮罩层统一色
 
+@bgSize: 900px auto;
+
 @blueColor: #2CABFF;
 @successColor: #259b24;
 @dangerColor: #FF4949;
