--- a/src/views/home/home.less
+++ b/src/views/home/home.less
@@ -41,6 +41,7 @@
                 width: 100%;
                 min-height: 104px;
                 margin-bottom: 14px;
+                box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.05);
                 .cell {
                     position: relative;
                     float: left;
@@ -79,5 +80,109 @@
             }
 
         }
+    }
+    //首页图标
+    .icon-index-task {
+        display: inline-block;
+        background: url('/static/icons/5_1/transparent_icons.png') -30px -606px no-repeat;
+        width: 36px;
+        height: 36px;
+        background-size: @bgSize;
+    }
+
+    .icon-index-notice {
+        display: inline-block;
+        background: url('/static/icons/5_1/transparent_icons.png') -66px -606px no-repeat;
+        width: 36px;
+        height: 36px;
+        background-size: @bgSize;
+    }
+
+    .icon-index-safe-activity {
+        display: inline-block;
+        background: url('/static/icons/5_1/transparent_icons.png') -102px -606px no-repeat;
+        width: 36px;
+        height: 36px;
+        background-size: @bgSize;
+    }
+
+    .icon-index-qy-data {
+        display: inline-block;
+        background: url('/static/icons/5_1/transparent_icons.png') -138px -606px no-repeat;
+        width: 36px;
+        height: 36px;
+        background-size: @bgSize;
+    }
+
+    .icon-index-fw-data {
+        display: inline-block;
+        background: url('/static/icons/5_1/transparent_icons.png') -174px -606px no-repeat;
+        width: 36px;
+        height: 36px;
+        background-size: @bgSize;
+    }
+
+    .icon-index-hidden-danger {
+        display: inline-block;
+        background: url('/static/icons/5_1/transparent_icons.png') -210px -606px no-repeat;
+        width: 36px;
+        height: 36px;
+        background-size: @bgSize;
+    }
+
+    .icon-index-train {
+        display: inline-block;
+        background: url('/static/icons/5_1/transparent_icons.png') -30px -642px no-repeat;
+        width: 36px;
+        height: 36px;
+        background-size: @bgSize;
+    }
+
+    .icon-index-data-count {
+        display: inline-block;
+        background: url('/static/icons/5_1/transparent_icons.png') -66px -642px no-repeat;
+        width: 36px;
+        height: 36px;
+        background-size: @bgSize;
+    }
+
+    .icon-index-device {
+        display: inline-block;
+        background: url('/static/icons/5_1/transparent_icons.png') -102px -642px no-repeat;
+        width: 36px;
+        height: 36px;
+        background-size: @bgSize;
+    }
+
+    .icon-index-monitor-video {
+        display: inline-block;
+        background: url('/static/icons/5_1/transparent_icons.png') -138px -642px no-repeat;
+        width: 36px;
+        height: 36px;
+        background-size: @bgSize;
+    }
+
+    .icon-index-monitor-dq {
+        display: inline-block;
+        background: url('/static/icons/5_1/transparent_icons.png') -174px -642px no-repeat;
+        width: 36px;
+        height: 36px;
+        background-size: @bgSize;
+    }
+
+    .icon-index-monitor-sxt {
+        display: inline-block;
+        background: url('/static/icons/5_1/transparent_icons.png') -210px -642px no-repeat;
+        width: 36px;
+        height: 36px;
+        background-size: @bgSize;
+    }
+
+    .icon-index-news-info {
+        display: inline-block;
+        background: url('/static/icons/5_1/transparent_icons.png') -246px -642px no-repeat;
+        width: 36px;
+        height: 36px;
+        background-size: @bgSize;
     }
 }
