--- a/src/config.less
+++ b/src/config.less
@@ -91,3 +91,61 @@
         border-bottom: 1px solid @color;
     }
 }
+
+.border-right(@color) {
+    position: relative;
+    &:before {
+        content: '';
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 1px;
+        height: 100%;
+        box-sizing: border-box;
+        transform: scale(.5, 1);
+        -webkit-transform: scale(.5, 1);
+        transform-origin: 0 0;
+        -webkit-transform-origin: 0 0;
+        background-color: @color;
+    }
+}
+
+.border-left(@color) {
+    position: relative;
+    &:before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 1px;
+        height: 100%;
+        box-sizing: border-box;
+        transform: scale(.5, 1);
+        -webkit-transform: scale(.5, 1);
+        transform-origin: 0 0;
+        -webkit-transform-origin: 0 0;
+        background-color: @color;
+    }
+}
+
+//取消0.5边框
+.border-top-none {
+    &:before {
+        border-bottom: none;
+    }
+}
+.border-btm-none {
+    &:after {
+        border-bottom: none;
+    }
+}
+.border-right-none {
+    &:before {
+        background-color: transparent;
+    }
+}
+.border-left-none {
+    &:after {
+        background-color: transparent;
+    }
+}
