--- a/src/views/home/home.less
+++ b/src/views/home/home.less
@@ -29,11 +29,12 @@
         }
     }
     .home-wrap {
-        margin-top: @headerHeight + @headerTop - 1px;
+        padding-top: @headerHeight + @headerTop - 1px;
         padding-bottom: 0;
+        margin-top: 0;
         .actions-wrap {
             position: relative;
-            bottom: 30px;
+            bottom: 30px + @headerHeight;
             margin: auto 14px;
             //width: 93%;
             //max-width: 386px;
