--- a/src/views/home/home.less
+++ b/src/views/home/home.less
@@ -34,7 +34,7 @@
         margin-top: 0;
         .actions-wrap {
             position: relative;
-            bottom: 30px + @headerHeight;
+            bottom: 30px;
             margin: auto 14px;
             //width: 93%;
             //max-width: 386px;
