替换主色调

--- a/src/app.less
+++ b/src/app.less
@@ -187,7 +187,7 @@ input, button, select, textarea {
     width: 100%;
     margin: 0 auto;
     height: @headerTop;
-    background-color: #3399FF;
+    background-color: @mainBlue;
     position: fixed;
     top: 0;
     z-index: 25;
