--- a/src/config.less
+++ b/src/config.less
@@ -1,5 +1,6 @@
 //颜色规范
-@mainBlue: #3399ff; //主色调
+//@mainBlue: #3399ff; //主色调
+@mainBlue: #0056ff; //主色调
 @mainBlue01: #0056ff;
 @mainSucc: #57DA6D;
 @mainWarn: #FFBB00;
